# Phyrib

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  demo.c
include/phyrib/: collision.h  constraint.h  debug_render.h  internal.h  phyrib.h  physics_world.h  rigid_body.h  shape.h  spatial_hash.h  types.h
src/: collision_narrowphase.c  constraint.c  debug_render.c  dynamics.c  phyrib.c  rigid_body.c  shape.c  spatial_hash.c
tests/: CMakeLists.txt  test_shapes.c
